--- a/WebApplication/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication/WebApplication.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\font-awesome.css" />
+    <Content Include="Content\font-awesome.min.css" />
     <Content Include="Scripts\version.json" />
     <Content Include="Scripts\errors.json" />
     <Content Include="Scripts\angular-touch.min.js.map" />
@@ -74,6 +76,11 @@
     <Content Include="Content\main.css.map">
       <DependentUpon>main.css</DependentUpon>
     </Content>
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\FontAwesome.otf" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -84,7 +91,7 @@
   <ItemGroup>
     <Content Include="app\app.js" />
     <Content Include="app\components\components-module.js" />
-    <Content Include="app\components\list\ui-dropdown-tpl.html" />
+    <Content Include="app\components\dropdown\ui-dropdown-directive.js" />
     <Content Include="app\components\list\ui-list-tpl.html" />
     <Content Include="app\components\list\ui-list-directive.js" />
     <Content Include="Content\main.css">
