--- a/WebApplication/WebApplication/packages.config
+++ b/WebApplication/WebApplication/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs" version="1.3.14" targetFramework="net451" />
+  <package id="FontAwesome" version="4.2.0" targetFramework="net451" />
 </packages>
